# gdock

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitmodules  .pylintrc  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  LICENSE  README.md  TODO.md  USAGE.md  environment-macos.yml  environment.yml  example_run.sh  functions.py  gadock.py  gdock.py  install.sh  package-lock.json  requirements.txt  setup.py
.github/: SECURITY.md  pull_request_template.md
analysis/: plot-generations.ipynb
benchmark/: 00_download_bm5.sh  01_generate_restraints.sh  02_run_benchmark.sh  benchmark_v1.0.0.dat.xz
calibration/: .gitignore  00_download_dataset.sh  01_prepare_dataset.sh  02_extract_raw_energies.sh  README.md  analyze_clash_correlation.R  grid_search.R
docs/: index.md
etc/: ga_params.toml  gadock.ini  gdock.ini  genetic_algorithm_params.toml  params.toml  quotes
example/: 2OOB_native.izone  README.md  run-gdock.sh  run.toml  run_ensemble.toml
examples/: README.md  run-gdock.sh  run.toml
modules/: __init__.py  analysis.py  error.py  fitness.py  ga.py  geometry.py  profit.py  scoring.py  setup.py  structure.py  version.py
paper/: paper.bib  paper.md  paper.tex  references.bib
src/: chromosome.rs  clustering.rs  constants.rs  contact  evaluator.rs  fitness.rs  ga.rs  individual.rs  main.rs  metrics.rs  population.rs  restraints.rs  scoring.rs  structure.rs  toppar.rs  utils.rs
tools/: ambig2dic.py  ambig_to_str.py  analyze-benchmark.ipynb  analyze_sweep.py  create-benchmark-data.py  gen_ensemble.py  movie.py  run_bm.sh  (+6 more)
(+42 files in other folders)
