[package]
name = "gdock"
version = "2.0.0-rc.2"
edition = "2021"
license = "0BSD"
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
description = "Fast information-driven protein-protein docking using genetic algorithms and physics-based scoring"
repository = "https://github.com/rvhonorato/gdock"
readme = "README.md"
keywords = ["bioinformatics", "protein", "docking", "molecular", "genetics"]
categories = ["science", "command-line-utilities", "algorithms"]

[dependencies]
regex = "1.12"
rand = "0.8.5"
rand_distr = "0.4"
rayon = "1.11"
clap = "4.5"
colored = "2.1"
indicatif = "0.17"

[profile.dev]
debug = true
